--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
         <module>dubbo-api</module>
         <module>dubbo-provider</module>
         <module>dubbo-consumer</module>
+        <module>dubbo-common</module>
+        <module>general-demo</module>
     </modules>
     <packaging>pom</packaging>
 
